--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ p {
   transition: all 300ms ease;
 }
 
-.link__hover-effect--white:after{
+.link__hover-effect--white:after {
   background-color: #fff;
 }
-.link__hover-effect--black:after{
+.link__hover-effect--black:after {
   background-color: black;
 }
 
@@ -218,6 +218,90 @@ nav {
   font-size: 20px;
 }
 
+/* 
+
+MODAL 
+
+*/
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 1100px;
+  height: 700px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.5);
+  overflow: hidden;
+  display: flex;
+}
+
+.modal__half {
+  width: 50%;
+  padding: 40px 72px;
+}
+
+.modal__about {
+  background-color: rgb(245, 245, 245);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.modal__contact {
+  background-color: #242424;
+  color: white;
+}
+
+.modal__title {
+  font-size: 26px;
+}
+
+.modal__sub-title {
+  margin: 12px 0 24px 0;
+}
+
+.modal__para {
+  margin-bottom: 12px;
+  line-height: 1.75;
+}
+
+.modal__languages {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modal__language {
+  width: 25%;
+  padding: 16px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 300ms ease;
+}
+
+.modal__language:hover .language__name{
+  transform: scale(1);
+}
+
+.modal__language:hover{
+  filter: brightness(80%);
+  transform: scale(0.9);
+}
+
+.language__name{
+  position: absolute;
+  bottom: -10px;
+  transform: scale(0);
+  transition: all 300ms ease;
+}
+
+
+.modal__language--img {
+  width: 100%;
+}
 /*
 
 PROJECTS
@@ -235,7 +319,7 @@ PROJECTS
   transition: all 600ms ease;
 }
 
-.project:hover .project__img{
+.project:hover .project__img {
   transform: scale(1.07);
   filter: blur(5px);
 }
@@ -246,10 +330,12 @@ PROJECTS
   box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
   overflow: hidden;
 }
+
 .project__wrapper:hover .project__description {
   opacity: 1;
   transform: translateY(-50%);
 }
+
 .project__wrapper:hover .project__img {
   transform: scale(1.07);
   filter: blur(5px);
@@ -265,6 +351,7 @@ PROJECTS
   color: white;
   max-width: 550px;
 }
+
 .project__wrapper:hover .project__wrapper--bg {
   opacity: 0.7;
 }
