--- a/style.css
+++ b/style.css
@@ -378,12 +378,13 @@ MODAL
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: -1;
 }
 
 .modal__overlay--loading {
   background-color: #242424;
   font-size: 80px;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .modal__overlay--success {
@@ -392,6 +393,10 @@ MODAL
   text-align: center;
   padding: 28px;
   font-size: 40px;
+}
+
+.modal__overlay--visible{
+  z-index: 1;
 }
 
 .fa-spinner {
