--- a/style.css
+++ b/style.css
@@ -378,29 +378,24 @@ MODAL
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: -1;
 }
 
 .modal__overlay--loading {
   background-color: #242424;
   font-size: 80px;
-  /* z-index: -1; */
+  z-index: -1;
 }
-
 .modal__overlay--success {
   background-color: #4bb543;
   font-weight: 700;
+  font-size: 40px;
   text-align: center;
   padding: 28px;
   font-size: 40px;
 }
 
-.modal__overlay--visible{
-  z-index: 1;
-}
-
 .fa-spinner {
-  animation: spinner 750ms linear;
+  animation: spinner 750ms infinite linear;
 }
 
 @keyframes spinner {
@@ -412,14 +407,13 @@ MODAL
   }
 }
 
-.modal__exit{
+.modal__exit {
   position: absolute;
   top: 30px;
   right: 40px;
   color: white;
   font-size: 36px;
   z-index: 100;
-
 }
 /*
 
