--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ MODAL
   /* box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.5); */
   overflow: hidden;
   display: flex;
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 .modal__half {
