--- a/style.css
+++ b/style.css
@@ -50,12 +50,6 @@ textarea:focus {
   border-color: #f06449;
 }
 
-.modal--open {
-  z-index: 60;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.5);
-  visibility: visible;
-}
-
 .container {
   padding: 50px 0;
   width: 100%;
@@ -127,6 +121,18 @@ a {
 }
 button {
   cursor: pointer;
+}
+
+nav, .scroll, .header{
+  opacity: 1;
+  visibility: visible;
+  transition: all 600ms 800ms;
+}
+
+.modal--open nav, .modal--open .scroll, .modal--open .header{
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms;
 }
 
 /*
@@ -275,11 +281,17 @@ MODAL
   max-width: 1100px;
   height: 700px;
   border-radius: 20px;
-
-  /* box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.5); */
   overflow: hidden;
   display: flex;
-  /* visibility: hidden; */
+  visibility: hidden;
+  z-index: -1;
+  transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
+
+.modal--open .modal {
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible;
 }
 
 .modal__half {
@@ -289,18 +301,27 @@ MODAL
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 300ms ease-in;
+}
+.modal--open .modal__about,
+.modal--open .modal__contact 
+{
+  transform: translateX(0%);
 }
 
 .modal__about {
   background-color: rgb(245, 245, 245);
-  display: flex;
+  transform: translateX(-110%);
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .modal__contact {
   background-color: #242424;
   color: white;
+  transform: translateX(110%);
+  
 }
 
 .modal__title {
@@ -384,7 +405,7 @@ MODAL
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -407,6 +428,7 @@ MODAL
 
 .modal__overlay--visible {
   z-index: 1;
+  display: flex;
 }
 
 .fa-spinner {
