--- a/style.css
+++ b/style.css
@@ -123,18 +123,59 @@ button {
   cursor: pointer;
 }
 
-nav, .scroll, .header{
+section{
+  background-color: rgb(245, 245, 245);
+  transition: all 300ms ease
+}
+
+nav,
+.scroll,
+.header {
   opacity: 1;
   visibility: visible;
   transition: all 600ms 800ms;
 }
 
-.modal--open nav, .modal--open .scroll, .modal--open .header{
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
   opacity: 0;
   visibility: hidden;
   transition: all 400ms;
 }
 
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-solid .fa-envelope,
+.dark-theme .header__para
+{
+  color: white;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme .scroll__icon:after, .dark-theme .link__hover-effect--black:after{
+background-color: white;
+}
+
+
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: black;
+}
 /*
 
 LANDING PAGE
@@ -265,6 +306,7 @@ nav {
 
 .fa-solid {
   font-size: 20px;
+  
 }
 
 /* 
@@ -304,8 +346,7 @@ MODAL
   transition: all 300ms ease-in;
 }
 .modal--open .modal__about,
-.modal--open .modal__contact 
-{
+.modal--open .modal__contact {
   transform: translateX(0%);
 }
 
@@ -321,7 +362,6 @@ MODAL
   background-color: #242424;
   color: white;
   transform: translateX(110%);
-  
 }
 
 .modal__title {
