--- a/style.css
+++ b/style.css
@@ -123,9 +123,9 @@ button {
   cursor: pointer;
 }
 
-section{
+section {
   background-color: rgb(245, 245, 245);
-  transition: all 300ms ease
+  transition: all 300ms ease;
 }
 
 nav,
@@ -149,8 +149,9 @@ nav,
 .dark-theme .section__sub-title,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-solid .fa-envelope,
-.dark-theme .header__para
-{
+.dark-theme .header__para,
+.dark-theme .theme-icon 
+ {
   color: white;
 }
 
@@ -166,11 +167,10 @@ nav,
   border-color: white;
 }
 
-.dark-theme .scroll__icon:after, .dark-theme .link__hover-effect--black:after{
-background-color: white;
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
 }
-
-
 
 .dark-theme .mail__btn {
   background-color: white;
@@ -306,7 +306,6 @@ nav {
 
 .fa-solid {
   font-size: 20px;
-  
 }
 
 /* 
@@ -578,6 +577,7 @@ Footer
 */
 
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6%;
@@ -605,4 +605,103 @@ footer {
 .footer__social--link,
 .footer__copyright {
   color: white;
+}
+
+/*
+
+SHAPES
+
+*/
+.shape {
+  position: fixed;
+}
+
+.shape--0 {
+  top: 15vh;
+  left: 5vw;
+}
+.shape--1 {
+  top: 15vh;
+  left: 50vw;
+}
+.shape--2 {
+  top: 15vh;
+  left: 80vw;
+}
+.shape--3 {
+  top: 50vh;
+  left: 5vw;
+}
+.shape--4 {
+  top: 50vw;
+  left: 50vw;
+}
+.shape--5 {
+  top: 50vh;
+  left: 80vw;
+}
+.shape--6 {
+  top: 80vh;
+  left: 5vw;
+}
+.shape--7 {
+  top: 80vh;
+  left: 50vw;
+}
+.shape--8 {
+  top: 80vh;
+  left: 80vw;
+}
+
+
+/* Small phones, tablets, large smart phones */
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 80px;
+  }
+  .header__para {
+    font-size: 20px;
+  }
+  .modal {
+    top: 0;
+    left: 0;
+    height: auto;
+    transform: none;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+  .modal__half {
+    width: 100%;
+  }
+}
+
+/* Small Phones */
+
+@media (max-width: 480px){
+  .title{
+    font-size: 52px;
+  }
+  .header__para{
+  font-size: 18px;
+  }
+  .nav__link:first-child{
+    display: none;
+  }
+  .project__description--para{
+    display: none;
+  }
+  .project__description{
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+  .project__description--sub-title{
+    margin-bottom: 8px;
+  }
+  .modal__half{
+    padding: 40px;
+  }
 }
